--- a/di-2-zhang-an-zhuang-freebsd/2.3-unix.md
+++ b/di-2-zhang-an-zhuang-freebsd/2.3-unix.md
@@ -2,15 +2,14 @@
 
 ## UNIX 目录与 Windows 目录的区别
 
-首先我们欣赏以下几张照片：
+首先我们欣赏以下两张照片：
 
-![](../.gitbook/assets/zhuzi-1.jpg)
 
 ![](../.gitbook/assets/zhuzi-2.jpg)
 
 ![](../.gitbook/assets/zhuzi-3.jpg)
 
-前面两张图都是竹子，第三张图是若干棵行道树。
+前面两张图都是竹子，第二张图是若干棵行道树。
 
 亚里士多德认为种子之所以能长成大树，是因为种子暗含着一种潜能，并且在环境满足的情况下，有实现为长成一棵树的可能性。而人的不同就在于人没有固定不变的潜能，这也契合了儒家学说“君子不器”（《论语·为政》）。理解 UNIX 目录与 Windows 目录的异同，对于深入理解操作系统的设计与实现是很重要的。
 
@@ -38,12 +37,21 @@
 
 ## UNIX 与 Windows 文件名规范之差异
 
+### 非法字符
+
 许多在 FreeBSD 中可用的文件或文件名在 Windows 中都是不被允许的（即非法字符）。这些你经常会碰到——如果你使用 Git 在 Windows 上拉取项目。
 
 在这里仅列出一些笔者遇到过的：
 
 - 不能出现英文冒号 `:`
+
+![](../.gitbook/assets/unix1.png)
+
 - 不能叫 `con`
+
+
+
+![](../.gitbook/assets/unix2.png)
 
 更多要求，参见微软官方文档[命名文件、路径和命名空间](https://learn.microsoft.com/zh-cn/windows/win32/fileio/naming-a-file)。
 
@@ -52,3 +60,34 @@
 >你可以在 Windows 下使用 git 工具拉取 [freebsd-doc](https://github.com/freebsd/freebsd-doc) 项目试试看能否成功。我已经报告过 Bug。
 >
 >[The colon in the file name of the security report of the FreeBSD doc is not compatible with Microsoft Windows](https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=267636)
+
+### 大小写敏感
+
+FreeBSD 的 ZFS 和 UFS 都是 **大小写敏感** 的文件系统。而 macOS 的 HFS+（默认不支持）、APFS（默认不支持）以及 Windows 的 FAT32、NTFS 文件系统都是 **大小写不敏感** 的。
+
+- Windows 下 **大小写不敏感**
+
+![](../.gitbook/assets/unix3.png)
+
+可见，abc 和 ABC 无法共存，文件系统认为这是同一个文件。
+
+>**技巧**
+>
+>判断访问网站服务器类型，最简单的办法就是看网址路径是否是大小写敏感的：如果网站 `https://abc.com/abc` 和 `https://abc.com/ABC` 都能打开且内容一样，那么该网站多半是由 Windows 驱动的。
+
+- FreeBSD 下 **大小写敏感**
+
+```sh
+$ touch ABC
+$ touch abc
+$ ls
+abc	ABC
+```
+
+可见，abc 和 ABC 可以共存，文件系统认为这是两个不同的文件。
+
+
+#### 参考文献
+
+- [调整区分大小写](https://learn.microsoft.com/zh-cn/windows/wsl/case-sensitivity)，Windows 文件系统支持使用属性标志按目录设置区分大小写
+
