重写 Rust/Go 环境的配置

--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.8-jie-rustgo-huan-jing-de-pei-zhi.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.8-jie-rustgo-huan-jing-de-pei-zhi.md
@@ -39,8 +39,22 @@ fn main() {
 
 保存后，运行 `cargo run` 即可输出代码。
 
-## Go 语言
+## JetBrains Rust IDE
 
+- 使用 pkg 安装：
+
+```sh
+# pkg install jetbrains-rustrover
+```
+
+- 或者使用 Ports 安装：
+
+```sh
+# cd /usr/ports/devel/jetbrains-rustrover/ 
+# make install clean
+```
+
+## Go 语言
 
 ### 安装 Go
 
@@ -75,3 +89,17 @@ func main() {
 
 保存后，在终端运行 `go run helloWorld.go` 即可输出代码。
 
+### JetBrains GoLand IDE
+
+- 使用 pkg 安装：
+
+```sh
+# pkg install jetbrains-goland
+```
+
+- 或者使用 Ports 安装：
+
+```sh
+# cd /usr/ports/devel/jetbrains-goland/ 
+# make install clean
+```
