--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.8-jie-rustgo-huan-jing-de-pei-zhi.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.8-jie-rustgo-huan-jing-de-pei-zhi.md
@@ -2,6 +2,8 @@
 
 ## Rust
 
+Rust 旨在实现内存安全和线程安全，并发编程是 Rust 的又一个设计目标。从现状来看，Rust 正在蚕食 C/C++ 的地盘。
+
 ### 安装 Rust
 
 - 使用 pkg 安装：
@@ -55,6 +57,8 @@ fn main() {
 ```
 
 ## Go 语言
+
+Go 语言是由谷歌开发的一种原生支持并发的编程语言。
 
 ### 安装 Go
 
