--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.8-jie-rustgo-huan-jing-de-pei-zhi.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.8-jie-rustgo-huan-jing-de-pei-zhi.md
@@ -75,7 +75,12 @@ Go 语言是由谷歌开发的一种原生支持并发的编程语言。
 # make install clean
 ```
 
-安装成功后，输入 `go version` 查看软件版本。
+安装成功后，查看软件版本：
+
+```sh
+$ go version
+go version go1.21.13 freebsd/amd64
+```
 
 ### 为美好的世界献上祝福
 
@@ -91,7 +96,12 @@ func main() {
 }
 ```
 
-保存后，在终端运行 `go run helloWorld.go` 即可输出代码。
+保存后，在终端执行下列命令即可输出代码：
+
+```go
+$ go run helloWorld.go
+Hello, World!
+```
 
 ### JetBrains GoLand IDE
 
@@ -107,3 +117,7 @@ func main() {
 # cd /usr/ports/devel/jetbrains-goland/ 
 # make install clean
 ```
+
+---
+
+![](../.gitbook/assets/go1.png)
