--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.8-jie-rustgo-huan-jing-de-pei-zhi.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.8-jie-rustgo-huan-jing-de-pei-zhi.md
@@ -19,8 +19,20 @@ Rust 旨在实现内存安全和线程安全，并发编程是 Rust 的又一个
 # make install clean
 ```
 
+>**技巧**
+>
+>最新开发版在 `lang/rust-nightly`
 
-安装成功后，输入 `rustc --version` 或 `cargo --version` 可查看软件版本。
+---
+
+安装成功后，查看软件版本：
+
+```sh
+$ rustc --version
+rustc 1.88.0-nightly (10fa3c449 2025-04-26) (built from a source tarball)
+$ cargo --version
+cargo 1.88.0-nightly (d811228b1 2025-04-15) (built from a source tarball)
+```
 
 ### 为美好的世界献上祝福
 
@@ -31,7 +43,7 @@ $ cargo new greeting
 $ cd greeting
 ```
 
-新建并编辑 `src/main.rs`，添加如下文本：
+新建并编辑 `src/main.rs`，添加如下文本（默认应该就有）：
 
 ```rust
 fn main() {
@@ -39,7 +51,15 @@ fn main() {
 }
 ```
 
-保存后，运行 `cargo run` 即可输出代码。
+保存后，运行：
+
+```rust
+$ cargo run
+   Compiling greeting v0.1.0 (/home/ykla/projects/greeting)
+    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.58s
+     Running `target/debug/greeting`
+Hello, world!
+```
 
 ### JetBrains Rust IDE
 
@@ -55,6 +75,10 @@ fn main() {
 # cd /usr/ports/devel/jetbrains-rustrover/ 
 # make install clean
 ```
+
+---
+
+![](../.gitbook/assets/rust1.png)
 
 ## Go 语言
 
