--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.7-jie-python-yu-vscode.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.7-jie-python-yu-vscode.md
@@ -40,7 +40,9 @@
 # make install clean
 ```
 
-需要注意的是，通过这种方式获取到的 VS Code 其实是 [Code - OSS](https://github.com/microsoft/vscode)。Code - OSS 和 VS Code 的区别将不在这里展开陈述，有兴趣的人可以自己[阅读原文](https://github.com/microsoft/vscode/wiki/Differences-between-the-repository-and-Visual-Studio-Code)。主要是许可证不一样和可用的闭源资源不一样，类似 Chromium 和 Chrome 的关系。
+---
+
+需要注意的是，通过这种方式获取到的 VS Code 其实是 [Code - OSS](https://github.com/microsoft/vscode)。Code - OSS 和 VS Code 的区别主要是许可证不一样和可用的闭源资源不一样，类似 Chromium 和 Chrome 的关系。有兴趣的人可以自己[阅读原文](https://github.com/microsoft/vscode/wiki/Differences-between-the-repository-and-Visual-Studio-Code)。
 
 这里只想提一下，目前已知微软的 Python 插件，以及 LLVM 的 clangd 插件都能直接在 Code - OSS 运行，使用起来和 VS Code 没有任何区别。
 
