--- a/di-13-zhang-freebsd-te-se/di-13.3-jie-bsdinstall-yu-bsdconfig.md
+++ b/di-13-zhang-freebsd-te-se/di-13.3-jie-bsdinstall-yu-bsdconfig.md
@@ -793,9 +793,9 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
 
 | 菜单 | 说明 |
 | --- | --- |
-| X Exit Return to previous menu | X 退出 返回上一级菜单 |
-| > Add New Add new directive | > 添加 新增指令 |
-| > Delete Delete directive(s) | > 删除 删除指令 |
+| `X Exit Return to previous menu` | 退出 返回上一级菜单 |
+| `> Add New Add new directive` |  添加 新增指令 |
+| `> Delete Delete directive(s)` |  删除 删除指令 |
 
 查看配置当前正在使用的的启动项。
 
