修正兼容层错误

--- a/di-21-zhang-linux-jian-rong-ceng/di-21.2-jie-linux-jian-rong-ceng-ji-yu-centos-yuan-sheng.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.2-jie-linux-jian-rong-ceng-ji-yu-centos-yuan-sheng.md
@@ -7,9 +7,7 @@
 ## 安装基本系统
 
 ```sh
-# sysrc linux_enable="YES"
-# sysrc kld_list+="linux linux64"
-# kldload linux64
+# service linux enable
 # service linux start
 # pkg install emulators/linux-c7 dbus
 # service dbus enable #一般桌面已经配置
