chore: sync headers with SUMMARY.md

--- a/di-21-zhang-linux-jian-rong-ceng/di-21.4-jie-linux-jian-rong-ceng-ji-yu-archlinux-bootstrap.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.4-jie-linux-jian-rong-ceng-ji-yu-archlinux-bootstrap.md
@@ -1,4 +1,4 @@
-# 第 21.4 节 Linux 兼容层——基于 ArchLinux bootstrap
+# 第 21.4 节 ArchLinux 兼容层（基于 ArchLinux bootstrap）
 
 视频教程：[07-FreeBSD-ArchLinux 兼容层脚本使用说明](https://www.bilibili.com/video/BV1wg4y1w7QV)
 
