--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.2-jie-pf.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.2-jie-pf.md
@@ -80,7 +80,7 @@ pass out quick proto udp from 192.168.1.184 to any port 33434 >< 34500  # 默认
 可能用到的规则集文件 `/etc/pf.conf` 如下：
 
 ```
-# 流量整形
+# 数据包标准化
 scrub in all
 
 # 转发规则
