--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.8-jie-rustgo-huan-jing-de-pei-zhi.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.8-jie-rustgo-huan-jing-de-pei-zhi.md
@@ -80,6 +80,21 @@ Hello, world!
 
 ![](../.gitbook/assets/rust1.png)
 
+### 附录：安装 `rustup`
+
+- 使用 pkg 安装：
+
+```sh
+# pkg install rustup-init
+```
+
+- 使用 Ports 安装：
+
+```sh
+# cd /usr/ports/devel/rustup-init/ 
+# make install clean
+```
+
 ## Go 语言
 
 Go 语言是由谷歌开发的一种原生支持并发的编程语言。
