--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.8-jie-rustgo-huan-jing-de-pei-zhi.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.8-jie-rustgo-huan-jing-de-pei-zhi.md
@@ -80,7 +80,12 @@ Hello, world!
 
 ![](../.gitbook/assets/rust1.png)
 
+
 ### 附录：安装 `rustup`
+
+rustup-init 用于以普通/非 root 用户身份安装/初始化 rustup。
+
+Rustup 会从官方发布渠道安装 Rust 编程语言，能自己拉取不同版本的 rust，绕过了 Port lang/rust 及 `lang/rust-nightly`。有点像我的世界启动器，进去可以下我的世界的各种版本。
 
 - 使用 pkg 安装：
 
