--- a/di-10-zhang-xu-ni-hua/di-10.3-Podman.md
+++ b/di-10-zhang-xu-ni-hua/di-10.3-Podman.md
@@ -58,15 +58,6 @@ the file to the new location or just re-authenticate to the required registries.
 ```
 
 
-## 启动服务
-
-```sh
-# service podman enable
-# service podman start
-# service linux enable
-# service linux start
-```
-
 ## 配置 fstab
 
 将下列行写入 `/etc/fstab`
@@ -114,11 +105,22 @@ v6egress_if = "ix0"
 # zfs create -o mountpoint=/var/db/containers zroot/containers
 ```
 
-- 若你不使用 zfs：
+- 若你 **不** 使用 zfs：
 
 ```
 # sed -I .bak -e 's/driver = "zfs"/driver = "vfs"/' /usr/local/etc/containers/storage.conf
 ```
+
+
+## 启动服务
+
+```sh
+# service linux enable
+# service linux start
+# service podman enable
+# service podman start
+```
+
 
 ## 测试 Ubuntu 镜像
 
@@ -167,16 +169,7 @@ exit
 root@ykla:~ # # 回到了宿主机
 ```
 
-## 测试 nginx 
+## 参考文献
 
-
-- 拉取镜像
-
-```
-# podman pull --os=linux docker.io/library/nginx:latest
-# podman images
-REPOSITORY                TAG         IMAGE ID      CREATED      SIZE
-docker.io/library/ubuntu  latest      a0e45e2ce6e6  3 weeks ago  80.6 MB
-docker.io/library/nginx   latest      be69f2940aaf  5 weeks ago  197 MB
-```
-
+- [Podman Installation Instructions](https://podman.io/docs/installation)，官方安装教程
+- [Install Podman and run Containers in FreeBSD 14](https://cloudspinx.com/install-podman-and-run-containers-in-freebsd/)，非常实用
