补充更多用法

--- a/di-10-zhang-xu-ni-hua/di-10.3-Podman.md
+++ b/di-10-zhang-xu-ni-hua/di-10.3-Podman.md
@@ -169,6 +169,50 @@ exit
 root@ykla:~ # # 回到了宿主机
 ```
 
+## 测试 FreeBSD 维护者打包的 nginx 容器
+
+
+```sh
+# podman pull quay.io/dougrabson/nginx
+# podman run -d --name mynginx -p 8080:80 quay.io/dougrabson/nginx
+```
+
+打开网页 `http://ip:8080` 即可浏览测试 nginx 页面。
+
+## 更多用法
+
+- 查看日志
+
+```sh
+# podman logs 容器名称
+```
+
+- 查看运行状态
+
+```sh
+root@ykla:~ # podman ps # 查看当前运行的容器
+CONTAINER ID  IMAGE                            COMMAND               CREATEDSTATUS        PORTS                 NAMES
+ca088c9c56fc  quay.io/dougrabson/nginx:latest  /usr/local/sbin/n...  3 minutes agoUp 3 minutes  0.0.0.0:8080->80/tcp  mynginx
+root@ykla:~ # podman ps -a # 查看所有状态，包括运行失败的容器
+CONTAINER ID  IMAGE                            COMMAND               CREATED STATUS                     PORTS                              NAMES
+e8ea65b7e6c9  docker.io/library/nginx:latest   nginx -g daemon o...  17 minutes ago Exited (0) 292 years ago   0.0.0.0:8080->80/tcp               nginx-test
+ca088c9c56fc  quay.io/dougrabson/nginx:latest  /usr/local/sbin/n...  3 minutes ago Up 3 minutes               0.0.0.0:8080->80/tcp               mynginx
+```
+
+- 停止并删除容器
+
+```sh
+# podman stop 容器名称
+# podman rm 容器名称
+```
+
+- 删除镜像（必须先删除引用的容器再删除镜像）
+
+```sh
+# podman rmi 镜像名称
+```
+
+
 ## 参考文献
 
 - [Podman Installation Instructions](https://podman.io/docs/installation)，官方安装教程
