--- a/di-10-zhang-xu-ni-hua/di-10.3-Podman.md
+++ b/di-10-zhang-xu-ni-hua/di-10.3-Podman.md
@@ -212,6 +212,11 @@ ca088c9c56fc  quay.io/dougrabson/nginx:latest  /usr/local/sbin/n...  3 minutes a
 # podman rmi 镜像名称
 ```
 
+## 拉取 FreeBSD
+
+```sh
+# podman pull docker://freebsd/freebsd-runtime:14.2
+```
 
 ## 参考文献
 
