freebsd/freebsd-runtime

--- a/di-10-zhang-xu-ni-hua/di-10.3-Podman.md
+++ b/di-10-zhang-xu-ni-hua/di-10.3-Podman.md
@@ -218,6 +218,8 @@ ca088c9c56fc  quay.io/dougrabson/nginx:latest  /usr/local/sbin/n...  3 minutes a
 # podman pull docker://freebsd/freebsd-runtime:14.2
 ```
 
+更多参见 [freebsd/freebsd-runtime](https://hub.docker.com/r/freebsd/freebsd-runtime/tags)
+
 ## 参考文献
 
 - [Podman Installation Instructions](https://podman.io/docs/installation)，官方安装教程
