--- a/di-10-zhang-xu-ni-hua/di-10.3-Podman.md
+++ b/di-10-zhang-xu-ni-hua/di-10.3-Podman.md
@@ -1,5 +1,9 @@
 # 第 10.3 节 Podman
 
+Podman 旨在代替 Docker，同时与 Docker 的命令几乎完全相同，你甚至设置设置别名来使用。
+
+Podman 在 FreeBSD 上的实现是基于 Jail 的，你可以用命令 `jls` 查看当前的容器。
+
 ## 安装 Podman
 
 我们安装 sysutils/podman-suite 这个元包，会帮我们安装 sysutils/buildah、sysutils/podman 和 sysutils/skopeo。
