--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.5-fail2ban.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.5-fail2ban.md
@@ -117,7 +117,7 @@ bsdftp.conf			mysqld-auth.conf		sogo-auth.conf
 courier-auth.conf		nginx-botsearch.conf		sshd.conf
 ```
 
-需要注意，以 `bsd-` 开头的文件（如 `bsd-sshd.conf`）是 FreeBSD Port 维护者打的补丁。但是疏于维护？应该直接使用 `sshd.conf`。已经报告 bug。[security/py-fail2ban: Is it possible to remove patch-config_filter.d_bsd-sshd.conf from py-fail2ban?](https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=285647)
+需要注意，以 `bsd-` 开头的文件（如 `bsd-sshd.conf`）是 FreeBSD Port 维护者打的补丁。但是疏于维护？并不能使用。应该直接使用 `sshd.conf`。已经报告 bug。[security/py-fail2ban: Is it possible to remove patch-config_filter.d_bsd-sshd.conf from py-fail2ban?](https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=285647)，对方拒绝接受这是 bug。
 
 - ② 查看 Fail2Ban 支持的防火墙：
 
