--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.5-fail2ban.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.5-fail2ban.md
@@ -1,6 +1,6 @@
 # 第 15.5 节 Fail2Ban（基于 IPFW、PF、IPF）
 
-根据开发者[官方说明](https://github.com/fail2ban/fail2ban)，Fail2Ban 可封禁多次身份验证错误的主机，[即通过更新系统防火墙规则来拒绝来自那些 IP 地址的新连接](https://github.com/fail2ban/fail2ban/wiki/How-fail2ban-works)。Fail2Ban 几乎完全由 Python 写就（Python 96.0%）。
+根据开发者[官方说明](https://github.com/fail2ban/fail2ban)，Fail2Ban 可封禁多次身份验证错误的主机，[即通过更新系统防火墙规则来拒绝来自那些 IP 地址的新连接](https://github.com/fail2ban/fail2ban/wiki/How-fail2ban-works)。Fail2Ban 几乎完全由 Python 写就（Python 96.0%）。本文适配了 FreeBSD 中常见的三种防火墙——IPFW、PF、IPF，你不需要配置以上所有的防火墙，只需选择你喜欢的那款防火墙即可。
 
 ## 安装 Fail2Ban
 
