--- a/di-2-zhang-an-zhuang-freebsd/2.3-unix.md
+++ b/di-2-zhang-an-zhuang-freebsd/2.3-unix.md
@@ -100,10 +100,10 @@ abc	ABC
 
 可以看到在早期二者是独立的，否则 CRLF 会导致当前行“下沉”一行。
 
-Windows 操作系统默认的文本换行符为 CRLF（即 `\r\n`，0x0D 0x0A，`^M$`），而 Unix（早期 macOS 是 \\r）默认使用 LF（即 \\n，0x0A，`$`）。
+Windows 操作系统默认的文本换行符为 CRLF（即 `\r\n`，0x0D 0x0A，`^M$`），而 Unix（早期 macOS 是 \\r，0x0D）默认使用 LF（即 \\n，0x0A，`$`）。
 
 当然，现在这些符号都出现在每行文本的末尾处（即每行都存在）。
 
-二者是互不兼容的，如果你把 Windows 换行符的文件放到 Unix 下面，可能导致每行末尾多出一个 `^M` 字符，对于某些工具，会造成失败错误，对于 FreeBSD Port 相关文件来说，就是会把多行识别为一行。
+二者是互不兼容的，如果你把 Windows 换行符的文件放到 Unix 下面，可能导致每行末尾多出一个 `^M` 字符，对于某些工具，会造成识别错误，对于 FreeBSD Port 相关文件来说，则会把多行识别为一行。
 
 
