--- a/di-2-zhang-an-zhuang-freebsd/2.3-unix.md
+++ b/di-2-zhang-an-zhuang-freebsd/2.3-unix.md
@@ -106,4 +106,20 @@ Windows 操作系统默认的文本换行符为 CRLF（即 \\r\\n，0x0D 0x0A，
 
 二者是互不兼容的，如果你把 Windows 换行符的文件放到 Unix 下面，可能导致每行末尾多出一个 `^M` 字符，对于某些工具，会造成识别错误，对于 FreeBSD Port 相关文件来说，则会把多行识别为一行。
 
+但是两种换行符可以互相转换。在 FreeBSD 下可以用 Port `converters/dos2unix` 来实现，该软件包含 2 个命令：`dos2unix`（Windows 换行符到 Unix）、`unix2dos`（Unix 换行符到 Windows）。基本用法是 `$ dos2unix -n a.txt b.txt`，如果不需要保留源文件，可以直接 `$ dos2unix a.txt b.txt c.txt`（一次转换多个文件）。可以用命令 `file a.txt` 来判断文件的换行符：
+
+- 使用普通的 Unix 换行符文本文件
+
+```sh
+$ file a.txt
+a.txt: Unicode text, UTF-8 text
+```
+
+- 使用 Windows 换行符的文本文件
+
+```sh
+$ file b.txt 
+b.txt: Unicode text, UTF-8 text, with very long lines (314), with CRLF line terminators
+```
+
 
