Windows 与 Unix 字符编码的差异 (#548)
* Update di-5.9-jie-ya-suo-yu-jie-ya.md

* Windows 与 Unix 字符编码的差异

* Update 2.3-unix.md

* Update 2.3-unix.md

* Update CHANGELOG.md

--- a/di-2-zhang-an-zhuang-freebsd/2.3-unix.md
+++ b/di-2-zhang-an-zhuang-freebsd/2.3-unix.md
@@ -122,4 +122,33 @@ $ file b.txt
 b.txt: Unicode text, UTF-8 text, with very long lines (314), with CRLF line terminators
 ```
 
+## Windows 与 Unix 字符编码的差异
+
+由于计算机只识别 `0` 和 `1`，故字符编码是一种用于将字符转换为数字表示的规则体系。字符可以是屏幕上可见的文字，也可以是不可见的控制标记，如换行符（LF）、回车符（CR）等，涵盖文本中常见的元素，如数字、Emoji 表情符号、汉字、拉丁字母等。编码方式则是为这些字符分配唯一数字标识（通常是整数），即代码点（code point）的过程。
+
+例如，在 ASCII（American Standard Code for Information Interchange，美国信息交换标准代码，ISO/IEC 646）编码中，`0x41`（即二进制 `0100 0001`）代表大写字母 `A`。ASCII 编码仅支持英文字母、数字及常见英文标点符号——共计支持 128 个字符。
+
+而在 Unicode 编码体系中，“你”这个汉字的代码点是 U+4F60。在 UTF-8（8-bit Unicode Transformation Format，8 位 Unicode 转换格式）编码方式下，它被编码为字节序列 `0xE4 0xBD 0xA0`（二进制为 `11100100 10111101 10100000`）。UTF-8 编码涵盖的字符范围远超 GBK（国家 `G` 标准 `B` 扩展 `K`），里面甚至还有埃及圣书体——如果现在你的屏幕上能看到 “𓀀”“𓃕”“𓌊” 这三个字符，那么你很可能正在使用 UTF-8 编码（如果你使用的是 UTF-8 编码但仍无法显示这些字符，很可能是字体不支持这些字符集，而非编码问题）。
+
+那么程序如何识别文本的编码呢？通常，有些文件会在开头使用特定的字节序列（即 BOM，byte order mark，字节顺序标记）来标明编码。例如 UTF-8 的 BOM 是 `0xEF 0xBB 0xBF`。但在实际中，很多文本文件并没有 BOM，因此读取程序需要通过上下文猜测编码格式，这往往导致乱码。虽然可以通过程序分析文本内容（如统计字符分布或抽取字符计算）来猜测编码，但这种方法并不总是可靠。编码问题本质上源于系统间默认编码不同或未明确指定编码。
+
+ Windows 默认使用 GBK（如系统语言是简体中文），而 Linux 或 UNIX 则使用 UTF-8。
+
+ - Windows 11 24H2
+
+```powershell
+PS C:\Users\ykla> chcp
+活动代码页: 936 # 即 GBK
+```
+
+- Ubuntu 24.04/FreeBSD
+
+```sh
+root@ykla:/home/ykla# locale charmap
+UTF-8
+```
+
+其中，FreeBSD 的编码是在 [main/usr.bin/login/login.conf](https://github.com/freebsd/freebsd-src/blob/main/usr.bin/login/login.conf) 这个源文件中设置的，编译出来路径即 `/etc/login.conf`。
+
+自然，也可以把 Windows 10 及后续版本的字符编码设置为 UTF-8。当然，这除了造成更多地编码问题外并不能有效的解决问题。
 
