--- a/di-2-zhang-an-zhuang-freebsd/2.3-unix.md
+++ b/di-2-zhang-an-zhuang-freebsd/2.3-unix.md
@@ -162,11 +162,13 @@ UTF-8
 
 对于现代计算机网络来说，时间至关重要，我们可以做个小实验，把时间调慢 5 分钟，打开浏览器，你会发现绝大部分网站都打不开了（HTTPS）。
 
-中华民国二十八年（1939），民国政府将中国划分为五个时区，分为哈尔滨（Asia/Harbin）、上海（Asia/Shanghai）、重庆（Asia/Chongqing）、乌鲁木齐（Asia/Urumqi）和喀什（Asia/Kashgar）时间。
+计算机中的时区是由 IANA 时区数据库规范的，历史悠久。
+
+中华民国二十八年（1939），民国政府将中国划分为五个时区，分为哈尔滨（`Asia/Harbin`）、上海（`Asia/Shanghai`）、重庆（`Asia/Chongqing`）、乌鲁木齐（`Asia/Urumqi`）和喀什（`Asia/Kashgar`）时间。
 
 我们知道，按照时区来说，重庆（`Asia/Chongqing`）是东七区。所以某些人说（Asia/Chongqing）等同于北京时间也是不对的。从地理上看，重庆与北京时间实际上相差了一个小时。
 
-计算机中的时区是由 IANA 时区数据库规范的，历史悠久。
+但在 2025b 中，`Asia/Harbin`、`Asia/Chongqing`、`Asia/Shanghai` 均等同于北京时间。`Asia/Urumqi` 和 `Asia/Kashgar` 则均为 `UTC+6` 东六区时间。
 
 在 FreeBSD 中，北京时间同样为 `Asia/Shanghai`（东八区）。有些所谓国产操作系统会无中生有一个 `Asia/beijing`，这不仅是不尊重规范的行为，并且会造成严重后果，如退回到 UTC 时间。
 
