Windows 与 Unix 时间设置的差异 (#549)
* Update 2.3-unix.md

* Update 2.3-unix.md

* Update CHANGELOG.md

--- a/di-2-zhang-an-zhuang-freebsd/2.3-unix.md
+++ b/di-2-zhang-an-zhuang-freebsd/2.3-unix.md
@@ -152,3 +152,31 @@ UTF-8
 
 自然，也可以把 Windows 10 及后续版本的字符编码设置为 UTF-8。当然，这除了造成更多地编码问题外并不能有效的解决问题。
 
+## Windows 与 Unix 时间设置的差异
+
+中国统一使用一个时区，东八区，即 UTC+8，UTC（Coordinated Universal Time，协调世界时）时间几乎等同于 GMT（Greenwich Mean Time，格林尼治时间）。UTC 以国际原子时（temps atomique international，TAI）的秒长为基础（并不完全一致）：当铯（Cs）频率 ΔνCs，也就是铯 133 原子不受干扰的基态超精细跃迁频率，以单位 Hz 即 s-1 表示时，取其固定数值为 9 192 631 770 来定义秒——后续又对国际原子时进行了各种修正。
+
+有过 Windows 和 Unix 双系统安装经验的人会发现，Windows 和 Unix 的时间总是差 8 个小时。在现代计算机上（一般在主板上），都有一颗由纽扣电池供电的 RTC（Real-time clock，实时时钟芯片）芯片，用来维护系统断电后的计时。
+
+计算机操作系统在开机时会读取 RTC 的时间来设定系统的时间。localtime 即默认的本地时间，即直接读取 RTC 的结果（Windows 如此做）；UTC 则会把 RTC 的数据视为 UTC 时间（Unix 如此做）：于是你会发现双系统的时间倒流了 8 个小时。
+
+对于现代计算机网络来说，时间至关重要，我们可以做个小实验，把时间调慢 5 分钟，打开浏览器，你会发现绝大部分网站都打不开了（HTTPS）。
+
+计算机中的时区是由 IANA 时区数据库规范的，历史悠久。
+
+中华民国二十八年（1939），民国政府将中国划分为五个时区，分为哈尔滨（`Asia/Harbin`）、上海（`Asia/Shanghai`）、重庆（`Asia/Chongqing`）、乌鲁木齐（`Asia/Urumqi`）和喀什（`Asia/Kashgar`）时间。
+
+我们知道，按照时区来说，重庆（`Asia/Chongqing`）是东七区。所以某些人说（Asia/Chongqing）等同于北京时间也是不对的。从地理上看，重庆与北京时间实际上相差了一个小时。
+
+但在 2025b 中，`Asia/Harbin`、`Asia/Chongqing`、`Asia/Shanghai` 均等同于北京时间。`Asia/Urumqi` 和 `Asia/Kashgar` 则均为 `UTC+6` 东六区时间。
+
+在 FreeBSD 中，北京时间同样为 `Asia/Shanghai`（东八区）。有些所谓国产操作系统会无中生有一个 `Asia/beijing`，这不仅是不尊重规范的行为，并且会造成严重后果，如退回到 UTC 时间。
+
+>**技巧**
+>
+>中国也曾实行过夏令时（在夏天把表调慢几个小时，因为天亮的早）。
+
+### 参考文献
+
+- [秒的定义](https://www.nim.ac.cn/520/node/4.html)，中国计量科学院载秒的定义
+- [Time Zone Database](https://www.iana.org/time-zones)，时区数据库
