--- a/di-2-zhang-an-zhuang-freebsd/2.3-unix.md
+++ b/di-2-zhang-an-zhuang-freebsd/2.3-unix.md
@@ -163,7 +163,7 @@ UTF-8
 
 有过 Windows 和 Unix 双系统安装经验的人会发现，Windows 和 Unix 的时间总是差 8 个小时。在现代计算机上（一般在主板上），都有一颗由纽扣电池供电的 RTC（Real-time clock，实时时钟芯片）芯片，用来维护系统断电后的计时。
 
-计算机操作系统在开机时会读取 RTC 的时间来设定系统的时间。localtime 即默认的本地时间，即直接读取 RTC 的结果（Windows 如此做）；UTC 则会把 RTC 的数据视为 UTC 时间（Unix 如此做）：于是你会发现双系统的时间倒流了 8 个小时。比如，如果 RTC 时间是“2025 年 6 月 6 日白天中午 12:00，那么 Windows 下，也是“2025 年 6 月 6 日白天中午 12:00”，但在 Unix 下，时间会变为“2025 年 6 月 6 日白天早上 4:00”.
+计算机操作系统在开机时会读取 RTC 的时间来设定系统的时间。Local Time（地方时，当地太阳运行的时间）即默认的本地时间，即直接读取 RTC 的结果（Windows 如此做）；UTC 则会把 RTC 的数据视为 UTC 时间（Unix 如此做）：于是你会发现双系统的时间倒流了 8 个小时。比如，如果 RTC 时间是“2025 年 6 月 6 日白天中午 12:00（即 UTC+8），那么 Windows 下，也是“2025 年 6 月 6 日白天中午 12:00”（即 UTC+8），但在 Unix 下，时间会变为“2025 年 6 月 6 日白天早上 4:00”（即 UTC+8-8）。因为是我们使用 UTC+8，所以二者会相差 8 小时。
 
 对于现代计算机网络来说，时间至关重要，我们可以做个小实验，把时间调慢 5 分钟，打开浏览器，你会发现绝大部分网站都打不开了（HTTPS）。
 
@@ -176,6 +176,11 @@ UTF-8
 在 2025b 中，`Asia/Harbin`、`Asia/Chongqing`、`Asia/Shanghai` 均等同于北京时间。`Asia/Urumqi` 和 `Asia/Kashgar` 则均为 `UTC+6` 东六区时间。
 
 在 FreeBSD 中，北京时间同样为 `Asia/Shanghai`（东八区）。有些所谓国产操作系统会无中生有一个 `Asia/beijing`，这不仅是不尊重规范的行为，并且会造成严重后果，如退回到 UTC 时间。
+
+>**注意**
+>
+>北京（东经 116.4°）的地方时并不完全等于 UTC+8。我们所述的北京时间不是北京的地方时，而是东经 120 度（上海 120°52′）的地方时。
+
 
 >**技巧**
 >
