--- a/di-2-zhang-an-zhuang-freebsd/2.3-unix.md
+++ b/di-2-zhang-an-zhuang-freebsd/2.3-unix.md
@@ -179,7 +179,7 @@ UTF-8
 
 >**注意**
 >
->北京（东经 116.4°）的地方时并不完全等于 UTC+8。我们所述的北京时间不是北京的地方时，而是东经 120 度（上海 120°52′）的地方时。
+>北京（东经 116°）的地方时并不完全等于 UTC+8。我们所述的北京时间不是北京的地方时，而是东经 120 度（上海东经 120°）的地方时。
 
 
 >**技巧**
