将 RTC 时间视为地方时（兼容 Windows 时间，防止差 8 小时）

--- a/di-16-zhang-fu-wu-qi/di-16.4-jie-shi-jian-fu-wu.md
+++ b/di-16-zhang-fu-wu-qi/di-16.4-jie-shi-jian-fu-wu.md
@@ -38,6 +38,18 @@ CRON_TZ=CST-8
 0 8 * * * date >> ~/date.log
 ```
 
+- 将 RTC 时间视为地方时（兼容 Windows 时间，防止差 8 小时）
+
+```sh
+# touch /etc/wall_cmos_clock # 创建验证文件
+# reboot                     # 重启系统
+# sysctl machdep.wall_cmos_clock # 验证内核参数
+machdep.wall_cmos_clock: 1
+```
+
+### 参考文献
+
+- [adjkerntz ](https://man.freebsd.org/cgi/man.cgi?adjkerntz(8))
 
 ## 配置同步时间
 
