《形而上学》1049b 章节

--- a/di-2-zhang-an-zhuang-freebsd/2.3-unix.md
+++ b/di-2-zhang-an-zhuang-freebsd/2.3-unix.md
@@ -11,7 +11,7 @@
 
 前一张图是竹子，第二张图是若干棵行道树。
 
-亚里士多德认为种子之所以能长成大树，是因为种子暗含着一种潜能，并且在环境满足的情况下，有实现为长成一棵树的可能性。而人的不同就在于人没有固定不变的潜能，这也契合了儒家学说“君子不器”（《论语·为政》）。理解 UNIX 目录与 Windows 目录的异同，对于深入理解操作系统的设计与实现是很重要的。
+亚里士多德认为种子之所以能长成大树，是因为种子暗含着一种潜能，并且在环境满足的情况下，有实现为长成一棵树的可能性（参见 《形而上学》 1049b）。而人的不同就在于人没有固定不变的潜能，这也契合了儒家学说“君子不器”（《论语·为政》）。理解 UNIX 目录与 Windows 目录的异同，对于深入理解操作系统的设计与实现是很重要的。
 
 我们都听说过一个故事，竹子（Bambusoideae）开花意味着大片竹林的死亡。这是因为，大部分看似茂密繁盛的竹林，极有可能到头来只有一棵竹子真实存活。这些竹子都是从相同的地下根系生长出来的，虽然看起来是多个竹子，它们其实是一个整体。这也是雨后春笋的来历。无论他们相隔多远，仍旧一荣俱荣，一损俱损。这就是 UNIX 的目录——系统中的所有目录都依赖于根（root）。根（`/`）是一切目录的起点。比如 `/home/ykla/nihao`、`/bin/sh`、`/etc/fstab` 他们追根溯源，都是从根出发的。换言之，如果你删除 `/`，那么等于删除了整个系统，所有设备上的目录都会被删除。
 
