--- a/di-19-zhang-wen-xue-gu-shi/di-19.7-jie-za-ji.md
+++ b/di-19-zhang-wen-xue-gu-shi/di-19.7-jie-za-ji.md
@@ -914,9 +914,9 @@ FreeBSD 是什么东西？我们都知道 iPhone 用的系统是 iOS，MacBook P
 
 ## 153 我是谁？
 
-我是知觉感知的集合体吗？离开了知觉感知的我是真正的存在吗？这些感知完全有可能是 Ai 模拟的。闭上眼睛，悬置一切从感知中获得的东西，包括语言文字，还能剩下什么？我发现只有纯粹的无的存在，因为就连黑暗也是一种感知，正如天生的盲人是感受不到黑暗的，就是无。我发现我做的梦很奇怪，里面一直没有任何人，只有我自己。我怀疑，那才是真实的世界，但是同时也是这个世界的侧显。也就是说，这个世界的确像看起来这个样子，但是不完全，还有一部分是靠梦所揭示的。所以我懂了。梦和现在的世界都是真实的世界。一定存在一种方式让我们看到另一个侧面。正如三视图一样。但是如何证明这一点。我想所谓的反映论就可以证明一部分。但是反过来，如何证伪所谓现实这不是梦？所谓的梦就是不清晰的，不连续的影像。并且往往违反了所谓的逻辑学和科学。并且很快就会忘掉。但是这些逻辑和科学本身就是经验总结，本身不必然是真实可信的。但是考虑到逻辑和科学本身不可信。你只是用了这种标准去判断罢了。如果逻辑不可信，那上面用逻辑推导出逻辑不可信的逻辑可信不可信？逻辑、语言、符号的存在会不会是一种将意思框定的既成事实式的骗局，正如结构主义解构主义，我们都被后面的不可知之物控制了。所以真正的困难在于超越于世界去证明世界的真实性，除了假设上帝存在以外，很难有其他解决办法。因为上面已经说了经验论不是先天综合命题，不具有普遍必然性。在理性框架内的诸多探索最终也只会导入神秘主义，比如维特根斯坦的不可说理论，而且理论本身往往暗示或直接预设了上帝的存在。而且说到底，笛卡尔并未真正悬置一切，他保留了逻辑、语言和文字。乃至于逻辑论证中都存在循环论证的问题。这也是这么多的哲学家信仰上帝之原因。问题本身就意味着超越于世界，因此变成了一个宗教学神学问题。
+我是知觉感知的集合体吗？离开了知觉感知的我是真正的存在吗？这些感知完全有可能是 AI 模拟的。闭上眼睛，悬置一切从感知中获得的东西，包括语言文字，还能剩下什么？我发现只有纯粹的无的存在，因为就连黑暗也是一种感知，正如天生的盲人是感受不到黑暗的，就是无。我发现我做的梦很奇怪，里面一直没有任何人，只有我自己。我怀疑，那才是真实的世界，但是同时也是这个世界的侧显。也就是说，这个世界的确像看起来这个样子，但是不完全，还有一部分是靠梦所揭示的。所以我懂了。梦和现在的世界都是真实的世界。一定存在一种方式让我们看到另一个侧面。正如三视图一样。但是如何证明这一点。我想所谓的反映论就可以证明一部分。但是反过来，如何证伪所谓现实这不是梦？所谓的梦就是不清晰的，不连续的影像。并且往往违反了所谓的逻辑学和科学。并且很快就会忘掉。但是这些逻辑和科学本身就是经验总结，本身不必然是真实可信的。但是考虑到逻辑和科学本身不可信。你只是用了这种标准去判断罢了。如果逻辑不可信，那上面用逻辑推导出逻辑不可信的逻辑可信不可信？逻辑、语言、符号的存在会不会是一种将意思框定的既成事实式的骗局，正如结构主义解构主义，我们都被后面的不可知之物控制了。所以真正的困难在于超越于世界去证明世界的真实性，除了假设上帝存在以外，很难有其他解决办法。因为上面已经说了经验论不是先天综合命题，不具有普遍必然性。在理性框架内的诸多探索最终也只会导入神秘主义，比如维特根斯坦的不可说理论，而且理论本身往往暗示或直接预设了上帝的存在。而且说到底，笛卡尔并未真正悬置一切，他保留了逻辑、语言和文字。乃至于逻辑论证中都存在循环论证的问题。这也是这么多的哲学家信仰上帝之原因。问题本身就意味着超越于世界，因此变成了一个宗教学神学问题。
 
-假设存在一个封闭环境，里面都是 Ai，Ai 可以自己编写代码生成其他 Ai。我没有否认现实的一切是人类的活动改造的，比如高楼大厦。但是，这不意味着他们经过了人类的改造，就天然地拥有物质性这个属性。如果人类和环境本身都是假的，那么一切都是假的。你可以说存在的一切看上去是真的，比如感情，各种建筑、山川河流。但是他们本质上都是假的，没有任何意义。我发现总是不言自明的暗含地把经过实践的东西肯定为物质性的。这是不对的。如果实践本身的物质性就有问题，怎么能赋予这种活动以物质属性？而这种实践性本身的物质性是无从证明的，因为人类无法认识超越于人类感知以外的存在，除非你借助上帝，但是如此又说明你本身就不存在这种属性了。
+假设存在一个封闭环境，里面都是 AI，AI 可以自己编写代码生成其他 AI。我没有否认现实的一切是人类的活动改造的，比如高楼大厦。但是，这不意味着他们经过了人类的改造，就天然地拥有物质性这个属性。如果人类和环境本身都是假的，那么一切都是假的。你可以说存在的一切看上去是真的，比如感情，各种建筑、山川河流。但是他们本质上都是假的，没有任何意义。我发现总是不言自明的暗含地把经过实践的东西肯定为物质性的。这是不对的。如果实践本身的物质性就有问题，怎么能赋予这种活动以物质属性？而这种实践性本身的物质性是无从证明的，因为人类无法认识超越于人类感知以外的存在，除非你借助上帝，但是如此又说明你本身就不存在这种属性了。
 
 你说有没有这样一种可能性，我们只是灵魂寄生在一种动物上的存在。所以所谓的人和其关系根本就是子虚乌有，因为你无法反证这种可能性。
 
