--- a/di-19-zhang-wen-xue-gu-shi/di-19.7-jie-za-ji.md
+++ b/di-19-zhang-wen-xue-gu-shi/di-19.7-jie-za-ji.md
@@ -932,7 +932,7 @@ FreeBSD 是什么东西？我们都知道 iPhone 用的系统是 iOS，MacBook P
 
 这个魔法番好无聊，只看了一集。而且感觉设定上有很多逻辑错误。关于魔法的断句不可能没有人研究，否则缩短魔法的咒语是从哪出来的？而且关于魔法的断句/省略。初学者就经常会自己研究（比如忘掉哪句）。有什么作用自己会不知道吗？有什么作用自己会不知道吗。而且关于魔法的本质他给出的解释是心灵。但是后面又说是沟通世界。前后矛盾。
 
-他的演示说明魔法是唯心的。魔法可以有很多不同的吟唱方式。但是这并未解释魔法的本质。只能说明魔法的形式不是唯一的（否则如果只解释为心灵的作用，那么个人的力量就无穷大了。）。
+他的演示说明魔法是唯心的。魔法可以有很多不同的吟唱方式。但是这并未解释魔法的本质。只能说明魔法的形式不是唯一的（否则如果只解释为心灵的作用，那么个人的力量就无穷大了）。
 
 而且他的解释说魔法的作用是为了杀人。不如说魔法发展靠这个。而不是魔法目的依靠杀人。
 
