--- a/di-19-zhang-wen-xue-gu-shi/di-19.7-jie-za-ji.md
+++ b/di-19-zhang-wen-xue-gu-shi/di-19.7-jie-za-ji.md
@@ -458,8 +458,7 @@
 
 耐心似乎真的是有限的。
 
-对于无能为力的大多数人来说，没有高考的人生是不完整的，留有缺憾的人生。很高兴，张的人生有个所谓的缺憾才没有更大的完美。大专学历的张并没有放弃理想，他的的确确喜爱亦有天份从事这份工匠工作，在一个岗位上默默无言，十年，二十年，甚至是三十年。我们没
-有人会在意门口门卫老大爷叫什么。同样的，张也如此。我们都说职业不分贵贱，但是我们心中，早就有了标尺，它的精度，比张的游标卡尺还要精确不少。
+对于无能为力的大多数人来说，没有高考的人生是不完整的，留有缺憾的人生。很高兴，张的人生有个所谓的缺憾才没有更大的完美。大专学历的张并没有放弃理想，他的的确确喜爱亦有天份从事这份工匠工作，在一个岗位上默默无言，十年，二十年，甚至是三十年。我们没有人会在意门口门卫老大爷叫什么。同样的，张也如此。我们都说职业不分贵贱，但是我们心中，早就有了标尺，它的精度，比张的游标卡尺还要精确不少。
 
 我看中张不仅是因为他有这种官方的工匠精神，更是他的人。人性本恶还是本善我无从知晓，看到旺旺后，我相信了儒家孟子的观点—人性，本善。没有这么多好人，只是坏人太多了，别人略微施加好处，便觉得他一定是个好人。旺旺如是认为。
 
