--- a/di-26-zhang-openbsd/di-26.1-jie-gai-shu.md
+++ b/di-26-zhang-openbsd/di-26.1-jie-gai-shu.md
@@ -2,7 +2,7 @@
 
 ## OpenBSD 官方介绍 [INSTALLATION NOTES for OpenBSD/amd64 7.6](https://cdn.openbsd.org/pub/OpenBSD/7.6/amd64/INSTALL.amd64)
 
-OpenBSD 是一款功能完备的多平台类 UN*X 操作系统，基于 Berkeley Networking Release 2 (Net/2) 和 4.4BSD-Lite。尽管该家族中有多个操作系统，但 OpenBSD 以“安全性”和“严谨性”优先而独树一帜。OpenBSD 团队致力于实现所谓的“默认安全”状态，这意味着 OpenBSD 用户可以确信，新安装的系统不会轻易遭到入侵。通过积极的安全策略，OpenBSD 实现了这一“默认安全”目标。
+OpenBSD 是一款功能完备的多平台类 UN*X 操作系统，基于伯克利 Networking Release 2 (Net/2) 和 4.4BSD-Lite。尽管该家族中有多个操作系统，但 OpenBSD 以“安全性”和“严谨性”优先而独树一帜。OpenBSD 团队致力于实现所谓的“默认安全”状态，这意味着 OpenBSD 用户可以确信，新安装的系统不会轻易遭到入侵。通过积极的安全策略，OpenBSD 实现了这一“默认安全”目标。
 
 由于安全漏洞本质上是设计或实现中的错误，OpenBSD 团队不仅注重新代码的编写，也同样重视发现和修复现有的设计缺陷及实现的漏洞。因此，OpenBSD 系统不仅更加安全，也更加稳定。所有关键系统组件的源代码都经过检查，以防止远程访问、本地访问、拒绝服务、数据破坏以及信息收集等问题。
 
