偏执的社区

--- a/di-26-zhang-openbsd/di-26.1-jie-gai-shu.md
+++ b/di-26-zhang-openbsd/di-26.1-jie-gai-shu.md
@@ -28,6 +28,16 @@ OpenBSD 采用了 LLVM/Clang 项目来构建系统，默认 shell 为 ksh（Korn
 
 OpenBSD 软件包较少，过时的软件包都被移除了，新的来不及移植，举例来说你甚至找不到一个能用的登录管理器（gdm 除外）。
 
+## 偏执的社区
+
+在与几位 OpenBSD 的维护者和社区进行交流过程中，我感受到他们在技术讨论中表现出相当的固执。例如，我曾反馈 KDE5 无法正常启动、出现黑屏的情况，但对方始终坚持这是我自身配置的问题。然而，数月之后我才发现，问题实际上出现在虚拟机环境中，尤其是在启用 UEFI 的情况下才会触发该 bug。
+
+另一个问题出现在 EFI 分区的处理上。OpenBSD 安装器默认创建的分区布局不合理，尤其在仅有 100GB 磁盘空间的情况下表现尤为糟糕。默认分区将空间划分得过于细碎，实际操作中例如执行 pkg_add gnome 就可能导致空间耗尽。而系统本身又不允许用户在安装过程中自定义 EFI 分区：即使用户自行创建了 EFI 分区，系统也无法识别，必须首先让安装器创建默认 EFI 分区，然后手动删除其余分区，仅保留 EFI，才能继续进行个性化分区设置。直到 7.6 版本，此方面才略有改进。
+
+此外，OpenBSD 的安装器在网络处理和错误恢复方面也存在严重问题。例如，在安装过程中需要在线下载驱动，但下载失败时并没有合理的错误处理机制；若用户尝试使用 Ctrl-C 中断，系统往往直接崩溃，只能重新安装；断网状态下，安装器也会卡死在某一步，无法继续。
+
+以上我已经向相关开发者报告过多个实际存在的 bug，然而并未获得积极回应。甚至在 KDE5 移植相关的讨论中，有维护者不愿正视技术问题，反而与我争执。这种对待用户反馈的态度，与 OpenBSD 一直标榜的严谨和可靠性并不相符，令人失望。
+
 ## 文件系统
 
 OpenBSD 默认使用的文件系统 FFS 其实和 FreeBSD 的 UFS 是一回事，在挂载参数上都没有任何区别。
