--- a/di-26-zhang-openbsd/di-26.1-jie-gai-shu.md
+++ b/di-26-zhang-openbsd/di-26.1-jie-gai-shu.md
@@ -38,6 +38,14 @@ OpenBSD 软件包较少，过时的软件包都被移除了，新的来不及移
 
 以上我已经向相关开发者报告过多个实际存在的 bug，然而并未获得积极回应。甚至在 KDE5 移植相关的讨论中，有维护者不愿正视技术问题，反而与我争执。这种对待用户反馈的态度，与 OpenBSD 一直标榜的严谨和可靠性并不相符，令人失望。
 
+## 不稳定的 ABI
+
+据 rust 维护者反馈（[OpenBSD support](https://github.com/rust-lang/rustup/issues/2168)），OpenBSD 的 ABI 十分不稳定，在这方面甚至和 Linux 接近。正因如此，难以将 rust 引入 OpenBSD。
+
+>OpenBSD 并不尝试保持向下兼容。在任意时刻，OpenBSD 仅支持两个稳定版本，同时还提供一个频繁更新的开发版本，称为 `-current`。一般来说，较旧稳定版中的二进制文件无法在较新的稳定版上运行。此外，也无法保证上周的 `-current` 构建出的二进制文件能在本周的 `-current` 上正常运行。
+
+有人认为不同版本不兼容很正常，但请注意 OpenBSD 频繁的发布周期。
+
 ## 文件系统
 
 OpenBSD 默认使用的文件系统 FFS 其实和 FreeBSD 的 UFS 是一回事，在挂载参数上都没有任何区别。
