--- a/di-26-zhang-openbsd/di-26.1-jie-gai-shu.md
+++ b/di-26-zhang-openbsd/di-26.1-jie-gai-shu.md
@@ -28,7 +28,18 @@ OpenBSD 采用了 LLVM/Clang 项目来构建系统，默认 shell 为 ksh（Korn
 
 OpenBSD 软件包较少，过时的软件包都被移除了，新的来不及移植，举例来说你甚至找不到一个能用的登录管理器（gdm 除外）。
 
-## 偏执的社区
+### 文件系统
+
+OpenBSD 默认使用的文件系统 FFS 其实和 FreeBSD 的 UFS 是一回事，在挂载参数上都没有任何区别。
+
+#### 参考资料
+
+- [ffs -- Berkeley fast file system](https://man.freebsd.org/cgi/man.cgi?ffs(7))
+
+
+## 机遇与挑战
+
+### 偏执的社区
 
 在与几位 OpenBSD 的维护者和社区进行交流过程中，我感受到他们在技术讨论中表现出相当的固执。例如，我曾反馈 KDE5 无法正常启动、出现黑屏的情况，但对方始终坚持这是我自身配置的问题。然而，数月之后我才发现，问题实际上出现在虚拟机环境中，尤其是在启用 UEFI 的情况下才会触发该 bug。
 
@@ -38,7 +49,7 @@ OpenBSD 软件包较少，过时的软件包都被移除了，新的来不及移
 
 以上我已经向相关开发者报告过多个实际存在的 bug，然而并未获得积极回应。甚至在 KDE5 移植相关的讨论中，有维护者不愿正视技术问题，反而与我争执。这种对待用户反馈的态度，与 OpenBSD 一直标榜的严谨和可靠性并不相符，令人失望。
 
-## 不稳定的 ABI
+### 不稳定的 ABI
 
 据 rust 维护者反馈（[OpenBSD support](https://github.com/rust-lang/rustup/issues/2168)），OpenBSD 的 ABI 十分不稳定，在这方面甚至和 Linux 接近。正因如此，难以将 rust 引入 OpenBSD。
 
@@ -46,17 +57,10 @@ OpenBSD 软件包较少，过时的软件包都被移除了，新的来不及移
 
 有人认为不同版本不兼容很正常，但请注意 OpenBSD 频繁的发布周期。
 
-## 文件系统
-
-OpenBSD 默认使用的文件系统 FFS 其实和 FreeBSD 的 UFS 是一回事，在挂载参数上都没有任何区别。
-
-### 参考资料
-
-- [ffs -- Berkeley fast file system](https://man.freebsd.org/cgi/man.cgi?ffs(7))
-
-## 捐赠 OpenBSD
+### 捐赠 OpenBSD
 
 [Donating to the Foundation](https://www.openbsdfoundation.org/donations.html)，看起来中国大陆的人很难对其进行捐赠，其只接受国际 PayPal，`此国家或地区不支持捐赠给此收款人`。我方已经发过邮件反馈过从事。笔者甚至写了一封挂号信给远在加拿大的 OpenBSD 基金会，但是很遗憾，还是没有任何回应。哪怕是采用 GitHub Sponsors 也是好的！
+
 
 ## OpenBSD 服务器与 OpenBSD VPS
 
