--- a/di-26-zhang-openbsd/di-26.1-jie-gai-shu.md
+++ b/di-26-zhang-openbsd/di-26.1-jie-gai-shu.md
@@ -1,5 +1,19 @@
 # 第 26.1 节 OpenBSD 概述
 
+## 语录摘选
+
+>Linux 人们这样做是因为他们恨微软。我们这样做是因为我们热爱 Unix。
+>
+>——Theo de Raadt（OpenBSD 创始人）
+
+>这玩意儿垃圾得不行，大家还都在用，完全没意识到问题有多大。那些搞 Linux 的也不想着停下来好好改一改，只知道接着用、继续往上堆砌功能，没人愿意说一句：“这玩意儿真是个垃圾，咱们得重新造轮子。” 
+>
+>——Theo de Raadt（OpenBSD 创始人）
+
+>我觉得 OpenBSD 那帮人就像一群自慰的猴子，整天把“我们专注安全”这事儿当回事儿炒作个不停。
+>
+>——Linus Torvalds（Linux 创始人）
+
 ## OpenBSD 官方介绍 [INSTALLATION NOTES for OpenBSD/amd64 7.6](https://cdn.openbsd.org/pub/OpenBSD/7.7/amd64/INSTALL.amd64)
 
 OpenBSD 是一款功能完备的多平台类 UN*X 操作系统，基于伯克利 Networking Release 2 (Net/2) 和 4.4BSD-Lite。尽管该家族中有多个操作系统，但 OpenBSD 以“安全性”和“严谨性”优先而独树一帜。OpenBSD 团队致力于实现所谓的“默认安全”状态，这意味着 OpenBSD 用户可以确信，新安装的系统不会轻易遭到入侵。通过积极的安全策略，OpenBSD 实现了这一“默认安全”目标。
