重写 OpenBSD doas

--- a/di-26-zhang-openbsd/di-26.3-jie-pei-zhi.md
+++ b/di-26-zhang-openbsd/di-26.3-jie-pei-zhi.md
@@ -26,9 +26,20 @@
 
 ## 更新
 
-### 普通账号获取权限
+### doas
 
-以 root 账号登录系统，而后新建 `/etc/doas.conf` 文本，打开 `doas.conf`，添加一行 `permit persist :wheel`
+首先以 root 账号登录系统。执行命令：
+
+```sh
+# cp /etc/examples/doas.conf /etc/
+```
+
+由模板复制而来的 `/etc/doas.conf` 默认应包含 `permit keepenv :wheel` 这一行（要求用户属于 wheel 组才能实现 doas 命令，`keepenv` 即保留当前用户的环境变量）。
+
+如需 doas 免密码，应修改为 `permit nopass keepenv :wheel`。
+
+若想允许仅单个用户免密码使用 doas，可使用 `permit nopass keepenv 你的用户名 as root`，其中改成你的用户名即可。
+
 
 ### 更新与升级
 
