--- a/di-26-zhang-openbsd/di-26.3-jie-pei-zhi.md
+++ b/di-26-zhang-openbsd/di-26.3-jie-pei-zhi.md
@@ -1,8 +1,6 @@
 # 第 26.3 节 配置 OpenBSD
 
-## 初次登录
-
-### 获取驱动
+## 初次进入系统后获取驱动
 
 第一次进入系统后，OpenBSD 会自动检测 WiFi、显卡和声卡，并下载相关驱动。静等几分钟，待其自行更新。由于境外网站连接困难，如果等待时间过长，可 `Ctrl` + `C` 取消（在安装系统的时候 **不要这样做**，请断网！），待进入系统后运行 `# fw_update` 重新获取驱动。
 
@@ -24,9 +22,7 @@
 
 其它驱动与此类同。
 
-## 更新
-
-### doas
+## 配置 doas 以使用管理器权限
 
 首先以 root 账号登录系统。执行命令：
 
@@ -41,7 +37,7 @@
 若想允许仅单个用户免密码使用 doas，可使用 `permit nopass keepenv 你的用户名 as root`，其中改成你的用户名即可。
 
 
-### 更新与升级
+## 更新与升级
 
 内核更新：
 
@@ -104,7 +100,7 @@
 # mount /dev/sd1i /media/usb1
 ```
 
-### 其它格式
+### 其它文件系统
 
 OpenBSD 可挂载的外接硬盘格式有 NTFS（需要安装软件包 `ntfs_3g`）、ext2/ext3 以及 CD 等，具体命令可参考如下：
 
@@ -121,19 +117,19 @@ OpenBSD 可挂载的外接硬盘格式有 NTFS（需要安装软件包 `ntfs_3g`
 # umount /media/usb1
 ```
 
-## 挂载安卓设备
+### 挂载安卓设备
 
 最新的安卓系统磁盘都采用 MTP 方式映射，我们需要对应的 mtp 软件来管理手机文件。和 Linux 不同的是，OpenBSD 系统上可用的对应软件较少，这里我们使用 `simple-mtpfs` 来完成任务。
 
-1. 安装软件：`# pkg_add simple-mtpfs`
+- 安装软件：`# pkg_add simple-mtpfs`
 
-2. 新建目录：`# mkidr /media/mtp` （如遇错误，可先创建 `/media` 目录）
+- 新建目录：`# mkidr /media/mtp` （如遇错误，可先创建 `/media` 目录）
 
-3. 修改目录权限：`# chmod 755 /media/mtp`
+- 修改目录权限：`# chmod 755 /media/mtp`
 
-4. 挂载设备：`# simple-mtpfs -o allow_other /media/mtp`
+- 挂载设备：`# simple-mtpfs -o allow_other /media/mtp`
 
-5. 卸载设备：`# umount /media/mtp`
+- 卸载设备：`# umount /media/mtp`
 
 除安卓手机外，安卓电纸书等设备也可以使用上述方式挂载。
 
@@ -148,13 +144,11 @@ join WiFi名称 wpakey WiFi密码
 
 保存后即可。
 
-## 杂项
-
-### 加载触摸板
+## 加载触摸板
 
 打开 `/etc/wsconsctl.conf`，添加一行 `mouse.tp.tapping=1`。
 
-### 加载多线程
+## 加载多线程
 
 打开 `/etc/sysctl.conf`，添加一行 `hw.smt=1`。
 
@@ -165,9 +159,11 @@ ykla# sysctl hw.ncpuonline  # 查看线程数
 hw.ncpuonline=4
 ```
 
-### 关机
+## 关机
 
 OpenBSD 无 poweroff 可用。
+
+要关机：
 
 ```sh
 # halt -p
@@ -179,7 +175,7 @@ OpenBSD 无 poweroff 可用。
 # shutdown -h now
 ```
 
-### HTTP 代理
+## HTTP 代理
 
 **注意一定要是小写！此处大写不生效。**
 
@@ -187,7 +183,7 @@ OpenBSD 无 poweroff 可用。
 export http_proxy=http://192.168.X.X:7890
 ```
 
-### 相关资料
+## 相关资料
 
 - [OpenBSD FAQ](https://www.openbsd.org/faq/)—[中文版点这](https://openbsd-zh-association.github.io/docs-openbsd-zh/)
 - *Absolute OpenBSD, 2nd Edition: Unix for the Practical Paranoid*，ISBN 978-1593274764，No Starch Press
