--- a/di-26-zhang-openbsd/di-26.1-jie-gai-shu.md
+++ b/di-26-zhang-openbsd/di-26.1-jie-gai-shu.md
@@ -44,7 +44,7 @@ OpenBSD 软件包较少，过时的软件包都被移除了，新的来不及移
 
 >**注意**
 >
->OpenBSD 对 NVIDIA 显卡（N 卡）的支持，大致停留在 2009 年左右的 GT200 系列。
+>OpenBSD 对 NVIDIA 显卡（N 卡）的支持，大致停留在 2009 年左右的 GT200 系列。参见 [nv - NVIDIA video driver](https://man.openbsd.org/nv.4)。
 
 ### 文件系统
 
