--- a/di-27-zhang-netbsd/di-27.1-jie-gai-shu.md
+++ b/di-27-zhang-netbsd/di-27.1-jie-gai-shu.md
@@ -10,6 +10,10 @@ NetBSD 有 Linux 兼容层。
 
 驱动方面自带了 i915 显卡及 AMD 相关驱动，支持 UEFI NVMe。
 
+>**注意**
+>
+>NetBSD 对 NVIDIA（N 卡）的支持力度等同于 Linux 3.15，大概支持到了 2016 年的 Pascal 架构（GeForce GTX 10XX）。参见 [nouveau / NetBSD](https://nouveau.freedesktop.org/NetBSD.html)、[nouveau(4) - NetBSD Manual Pages](https://man.netbsd.org/nouveau.4)（具体硬件支持列表）。
+
 如果你想捐赠 NetBSD：
 
 - 最简单的方式是使用 Github Sponsors：<https://github.com/sponsors/netbsd> ~~还能刷个 Github 徽章 [Public Sponsor](https://github.com/orgs/community/discussions/19916) 出来~~
