--- a/di-26-zhang-openbsd/di-26.1-jie-gai-shu.md
+++ b/di-26-zhang-openbsd/di-26.1-jie-gai-shu.md
@@ -28,7 +28,7 @@ OpenBSD 是一款功能完备的多平台类 UN*X 操作系统，基于伯克利
 
 ## OpenBSD 简介
 
-OpenBSD，也是一款类 Unix 计算机操作系统，诞生于 1995 年，由荷裔加拿大的程序员西奥·德若特（Theo de Raadt）从 NetBSD 复刻而来（他也是 NetBSD 的创始人之一）。OpenBSD 每六个月发布一次新版本。
+OpenBSD，也是一款类 Unix 计算机操作系统，诞生于 1995 年，由荷裔加拿大籍的程序员 Theo de Raadt 从 NetBSD 复刻而来（他也是 NetBSD 的创始人之一）。OpenBSD 每六个月发布一次新版本。
 
 OpenBSD 声称是世界上最安全的操作系统（想起了 2014 年的德国电影 *[Who Am I – Kein System ist sicher](https://www.imdb.com/title/tt3042408/)* 即《[我是谁：没有绝对安全的系统](https://movie.douban.com/subject/25932086/)》）。OpenBSD 的口号是“Only two remote holes in the default install, in a heck of a long time!”（在如此漫长的时间里，默认安装下仅存在两个远程漏洞！）
 
