--- a/di-21-zhang-linux-jian-rong-ceng/di-21.1-jie-linux-jian-rong-ceng-shi-xian.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.1-jie-linux-jian-rong-ceng-shi-xian.md
@@ -119,6 +119,10 @@ FreeBSD 14.2-RELEASE    2022 年 1 月 9 日    FreeBSD 14.2-RELEASE
 
 路径转换机制使 Linux 进程在 `/` 之前查找 `emul_path`（默认为 `/compat/linux`）下的文件路径。例如，当 Linux 进程试图打开 `/etc/passwd` 时，它将真正访问 `/compat/linux/etc/passwd`，除非后者不存在。这被用来确保 Linux 进程加载 Linux 共享库，而不是类似名字的 FreeBSD 对应库，同时也提供了某些其他文件和虚拟文件系统的替代版本。
 
+由于本质上不存在真实的 Linux 内核，FreeBSD 所声明的 Linux 内核版本没有意义，喜欢的话可将版本定义成 `255.255` 都没关系。
+
+但是请注意，不同的软件对内核版本有不同的要求，所暴露的接口也不一样。比如 Arch Linux 低了就 chroot 不进去，会报错 `kernel too old`。
+
 ## 题外话：为什么使用 Linux 兼容层不是苦难哲学？
 
 开机就 `kldload linux64`、`kldload linux` 并不应该被责难和讽刺，殊不知荀子曾曰“君子生非异也，善假于物也”。使用 Linux 兼容层亦如此。这并没有什么荒唐可笑的地方，类似的技术如 Linux 上用 Wine/Crossover（乃至于 [ReactOS](https://reactos.org/)）；Windows 上的 Linux 兼容层和 Android 兼容层都很受欢迎。
