--- a/di-19-zhang-wen-xue-gu-shi/di-19.7-jie-za-ji.md
+++ b/di-19-zhang-wen-xue-gu-shi/di-19.7-jie-za-ji.md
@@ -985,3 +985,8 @@ FreeBSD 是什么东西？我们都知道 iPhone 用的系统是 iOS，MacBook P
 也就是说传统修仙小说的逻辑结局都是末法时代——也就是变成地球。以上论述同样适用于魔法世界。造成这个问题的本质因为是所有功法都是对同一种力量体系的应用或描述，无论是古法还是今法在实际上都是正确或者部分正确的（因为都可以使用），但却不具有根本上的可证伪性。
 
 比如其实牛顿的物理学本质上是错误的，因为他不是绝对真理。他在他适用范围外是无效的，所以科学存在就意味着目前的科学都是存疑的。所以整个科学都是不必然为真的。科学他永远也扩大不了自己的范围，他只存在于经验内。你能搞出来超越你自己认识的科学吗？但是功法这个东西不一样，他不具有可证伪性。古法照样能用，你凭什么说他是假的他不适用这个范围，说不定他用的比你还好。你最多只能说这个功法效果差或者好。而且不适用？他如果不适用他就压根不是玄幻世界。科学是因为有用我们学，功法不一样，功法本身就是用，他不需要有用。功法他是对同一种力量体系的描述，就是范围是完全一样的。这个和科学不一样，科学你可以说牛顿是低速惯性体系，相对论是高速。但是功法，是一个范围，对同一种体系的描述，一般不可拆分。不同的功法本质上都是不可知物，而且流俗的设定，功法有的人用起来强，有的弱，但是弱强还能转换。这让你的实验证明也是不可行的。而且有了你就能修？他还看资质。
+
+## 161
+
+“咋说呢，还是有道理的。我们这群人今天能聚在这里相对专业地讨论 BSD 还得多亏 Linux 圈子的乌烟瘴气”——然而并不是。我们应该都是参与过这个社区的。无论是捐款还是代码还是文档，而不是像大部分人那样连系统都没有装过就开始讨论一些看起来复杂的东西，其实自己狗屁不通。或者说有的人经验很丰富，但是不愿意分享只愿意每天在群里发一些乱七八糟的——当然我说的不是 chinafreebsd。几乎所有群都这样，这就是不同点。大家愿意参与，愿意出钱出力。以前翻译手册可能需要好几年，但是随着技术的发展，我一个人三天就能完成。但是问题不在于技术发展的程度，而在于“Get your hands dirty”（动手去做）。
+
