--- a/di-19-zhang-wen-xue-gu-shi/di-19.7-jie-za-ji.md
+++ b/di-19-zhang-wen-xue-gu-shi/di-19.7-jie-za-ji.md
@@ -988,5 +988,5 @@ FreeBSD 是什么东西？我们都知道 iPhone 用的系统是 iOS，MacBook P
 
 ## 161
 
-“咋说呢，还是有道理的。我们这群人今天能聚在这里相对专业地讨论 BSD 还得多亏 Linux 圈子的乌烟瘴气”——然而并不是。我们应该都是参与过这个社区的。无论是捐款还是代码还是文档，而不是像大部分人那样连系统都没有装过就开始讨论一些看起来复杂的东西，其实自己狗屁不通。或者说有的人经验很丰富，但是不愿意分享只愿意每天在群里发一些乱七八糟的——当然我说的不是 chinafreebsd。几乎所有群都这样，这就是不同点。大家愿意参与，愿意出钱出力。以前翻译手册可能需要好几年，但是随着技术的发展，我一个人三天就能完成。但是问题不在于技术发展的程度，而在于“Get your hands dirty”（动手去做）。
+“咋说呢，还是有道理的。我们这群人今天能聚在这里相对专业地讨论 BSD 还得多亏 Linux 圈子的乌烟瘴气”——然而并不是。我们应该都是参与过这个社区的。无论是捐款还是代码还是文档，而不是像大部分人那样连系统都没有装过就开始讨论一些看起来复杂的东西，其实自己狗屁不通。或者说有的人经验很丰富，但是不愿意分享只愿意每天在群里发一些乱七八糟的——当然我说的不是 chinafreebsd。几乎所有群都这样，这就是不同点。大家愿意参与，愿意出钱出力。以前翻译手册可能需要好几年，但是随着技术的发展，我一个人三天就能完成。但是问题不在于技术发展的程度，而在于“Get your hands dirty”（动手去做）。随着 AI 的发展，我们理应看到更多的高质量的开源新闻，但是正好相反。AI 的确给了大家参与的机会与能力，而问题在于 AI 自己不会动，无论什么时候街道总是需要人去扫。
 
