--- a/di-26-zhang-openbsd/di-26.1-jie-gai-shu.md
+++ b/di-26-zhang-openbsd/di-26.1-jie-gai-shu.md
@@ -32,7 +32,7 @@ OpenBSD 是一款功能完备的多平台类 UN*X 操作系统，基于伯克利
 
 OpenBSD，也是一款类 Unix 计算机操作系统，诞生于 1995 年，由荷裔加拿大籍的程序员 Theo de Raadt 从 NetBSD 复刻而来（他也是 NetBSD 的创始人之一）。根据现存的 [NetBSD 邮件列表](https://mail-index.netbsd.org/netbsd-users/1994/12/23/0000.html)，他是因为言语粗鄙和攻击他人被开除出核心小组的。
 
->在 12 月 20 日（指 1994 年），NetBSD 项目中仅存的核心成员要求 Theo de Raadt 辞职。这是一个极其艰难的决定，其原因在于 Theo 长期以来对 NetBSD 的用户与开发者表现出的无礼和辱骂行为。我们认为，作为 NetBSD 项目的代表不应有此类行为，并且这种行为从整体上来说对 NetBSD 造成了损害。
+>在 12 月 20 日（指 1994 年），NetBSD 项目中仅存的核心成员要求 Theo de Raadt 下台。这是一个极其艰难的决定，其原因在于 Theo 长期以来对 NetBSD 的用户与开发者表现出的无礼和辱骂行为。我们认为，作为 NetBSD 项目的代表不应有此类行为，并且这种行为从整体上来说对 NetBSD 造成了损害。
 >
 >这个决定之所以艰难，是因为 Theo 曾长期为 NetBSD 做出积极贡献。他曾是 NetBSD SPARC 支持的主要维护者，并编写了大量代码，数不胜数。我们当然愿意接受（并且非常希望看到）Theo 今后仍为 NetBSD 做出贡献，但我们认为他不再适合继续作为 NetBSD 的“官方”代表。
 
