--- a/di-1-zhang-zou-jin-freebsd/1.2-about-bsd.md
+++ b/di-1-zhang-zou-jin-freebsd/1.2-about-bsd.md
@@ -1,4 +1,7 @@
-# 第 1.2 节 FreeBSD 简史
+# 第 1.2 节 关于 FreeBSD 项目
+
+
+## FreeBSD 简史
 
 UNIX -> Networking Release 1-> Networking Release 2 -> 386BSD -> FreeBSD 1.0
 
@@ -8,7 +11,7 @@ UNIX -> Networking Release 1-> Networking Release 2 -> 386BSD -> FreeBSD 1.0
 ![图片来源：<https://github.com/freebsd/freebsd-src/blob/main/share/misc/bsd-family-tree>，有删减](../.gitbook/assets/bsd-family-tree.png)
 
 
-## FreeBSD 时间线
+### FreeBSD 时间线
 
 - 1962 年 分时操作系统（Timesharing OS）
 
